--- a/Nginx/Config/nginx.conf
+++ b/Nginx/Config/nginx.conf
@@ -1,1 +1,19 @@
+events {}
 
+http {
+    server {
+    listen 80;
+    listen 443 ssl;
+
+    server_name jphas.duckdns.org;
+
+    root /home/pi/Nginx/Content/;
+
+    ssl_certificate        /etc/nginx/certs/localhost.crt;
+    ssl_certificate_key    /etc/nginx/certs/localhost.key;
+
+    ssl_verify_client       on;
+    ssl_trusted_certificate /etc/nginx/certs/chained_lh.pem;
+    ssl_ocsp                on; # Enable OCSP validation
+    }
+}
