--- a/Nginx/Config/nginx.conf
+++ b/Nginx/Config/nginx.conf
@@ -9,11 +9,11 @@ http {
 
     root /home/pi/Nginx/Content/;
 
-    ssl_certificate        /etc/nginx/certs/localhost.crt;
-    ssl_certificate_key    /etc/nginx/certs/localhost.key;
+    ssl_certificate        /etc/nginx/certs/jphas.duckdns.org.crt;
+    ssl_certificate_key    /etc/nginx/certs/jphas.duckdns.org.key;
 
     ssl_verify_client       on;
-    ssl_trusted_certificate /etc/nginx/certs/chained_lh.pem;
+    # ssl_trusted_certificate /etc/nginx/certs/chained_lh.pem;
     ssl_ocsp                on; # Enable OCSP validation
     }
 }
