--- a/Nginx/Config/nginx.conf
+++ b/Nginx/Config/nginx.conf
@@ -7,7 +7,7 @@ http {
 
     server_name jphas.duckdns.org;
 
-    root /home/pi/RaspTest/Nginx/Content/;
+    root /usr/share/nginx/html/;
 
     ssl_certificate        /etc/nginx/certs/jphas.duckdns.org.crt;
     ssl_certificate_key    /etc/nginx/certs/jphas.duckdns.org.key;
