--- a/Nginx/Config/nginx.conf
+++ b/Nginx/Config/nginx.conf
@@ -2,18 +2,24 @@ events {}
 
 http {
     server {
-        listen 80;
+      # listen 80;
         listen 443 ssl;
 
         server_name jphas.duckdns.org;
 
         root /home/pi/RaspTest/Nginx/Content;
 
-        ssl_certificate        /etc/nginx/certs/jphas.duckdns.org.crt;
-        ssl_certificate_key    /etc/nginx/certs/jphas.duckdns.org.key;
+        ssl_certificate        /etc/ssl/private/jphas.duckdns.org.crt;
+        ssl_certificate_key    /etc/ssl/private/jphas.duckdns.org.key;
 
+        ssl on;
+
+        ssl_session_timeout 5m;
+
+        ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
+        ssl_prefer_server_ciphers on;
         ssl_verify_client       on;
-        # ssl_trusted_certificate /etc/nginx/certs/chained_lh.pem;
         ssl_ocsp                on; # Enable OCSP validation
     }
 }
