--- a/Nginx/Config/nginx.conf
+++ b/Nginx/Config/nginx.conf
@@ -1,15 +1,32 @@
 
-    server {
-        listen 80;
-        listen 443 ssl;
+user nginx;
+worker_processes  1;
 
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+}
+
+http {
+
+     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                       '$status $body_bytes_sent "$http_referer" '
+                       '"$http_user_agent" "$http_x_forwarded_for"';
+     access_log  /var/log/nginx/access.log  main;
+
+     server {
+#       listen 80;
+        listen 443 ssl;
         server_name jphas.duckdns.org;
+
+        access_log  /var/log/nginx/access.log;
 
 #       root /home/pi/RaspTest/Nginx/Content;
         root /usr/share/nginx/html;
 
-        ssl_certificate        /etc/ssl/private/jphas.duckdns.org.crt;
-        ssl_certificate_key    /etc/ssl/private/jphas.duckdns.org.key;
+        ssl_certificate        /etc/nginx/certs/jphas.duckdns.org.crt;
+        ssl_certificate_key    /etc/nginx/certs/jphas.duckdns.org.key;
 
         ssl_session_timeout 5m;
 
@@ -18,5 +35,10 @@
         ssl_prefer_server_ciphers on;
 #       ssl_verify_client       on;
         ssl_ocsp                on; # Enable OCSP validation
+
     }
+
+}
+
+
 
